# caselaw-graph-ring

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/citations/: edges.csv  import_edges.cypher  pipeline_results.json  stats.json  unlinked.json  validation_report.json
docs/: CONVERT_TO_PDF.md  QUICK_REFERENCE.md  RESEARCH_CONTEXT.html  RESEARCH_CONTEXT.md  paper.md
scripts/: generate_paper_results.py  run_agent4.sh  run_citation_pipeline.py  run_data_pipeline.py  run_evaluation.py  run_integration_test.py  run_pipeline.py  train_on_modal.py
src/: __init__.py  config.py
src/citations/: __init__.py  extractor.py  graph_edges.py  linker.py  patterns.py  validation.py
src/data/: __init__.py  cap_client.py  case_schema.py  courtlistener_client.py  preprocessing.py  scdb_loader.py  storage.py
src/demo/: __init__.py  app.py
src/graph/: __init__.py  docker_setup.py  graphsage.py  loader.py  retriever.py  schema.py  visualize.py
src/model/: __init__.py  ablations.py  dataset.py  evaluate.py  inference.py  modal_config.py  model.py  trainer.py
src/orchestrator/: __init__.py  orchestrator.py  status.py
src/orchestrator/agents/: __init__.py  base.py  citations.py  evaluation.py  graph.py  model.py
website/: DEPLOY.md  app.py  requirements.txt  vercel.json
website/api/: index.py
website/static/css/: styles.css
website/static/js/: manim-animations.js  sse-client.js
website/templates/: agents.html  base.html  data.html  demo.html  index.html  methodology.html  results.html
